[package]
name = "marco-polo-amm"
version = "0.0.0"
authors = ["alex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.20.1"
arrayref = "0.3.6"
chainlink_solana = "0.1.0"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.1"
pyth-client = '0.2.1'
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }
solana-program = "1.9.5"
thiserror = "1.0"

[dev-dependencies]
proptest = "0.10"
solana-sdk = "1.9.5"

[lib]
crate-type = ["cdylib", "lib"]
